test/libsolidity/syntaxTests/freeFunctions/free_virtual.sol
function fun() virtual {
}
// ----
// SyntaxError 4493: (0-26='function fun() virtual { }'): Free functions cannot be virtual.
